minor ice fill helper tweaks [skip ci]